# qc

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  configure  configure.ac  libqc.a.in  qc_floats.json.in  qc_info_defs.inc  qc_int.S
cmake-modules/: HackCMake.cmake
include/: qc_base.h  qc_config.h.in  qc_float.h  qc_float.inc  qc_int.h  qc_int.inc
int/: int16.s  int32.s  int64.s  int8.s
src/: qc_int.S
